Refactor WebDriver factories and enhance error handling in page navigation and element interactions